--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,9 @@
-#use_frameworks!
 platform :ios, "8.0"
 
 target 'SHWNLSClientSDK_Example' do
-  pod 'SHWNLSClientSDK', :path => '../'
+  pod 'SHWNLSClient', :path => '../'
 
   target 'SHWNLSClientSDK_Tests' do
     inherit! :search_paths
-
-    pod 'Kiwi'
   end
 end
