--- a/Example/SHWNLSClientSDK/SHWNLSClientSDK-Info.plist
+++ b/Example/SHWNLSClientSDK/SHWNLSClientSDK-Info.plist
@@ -29,6 +29,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
